# horstmann-dnp3-gateway

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_gateway.cmd
.github/workflows/: release-image.yml
apps/alarm-service/: README.md
apps/alarm-service/alarm_service/: __init__.py  main.py  rules.py
apps/backend-api/: requirements.txt
apps/backend-api/app/: main.py
apps/backend-api/app/api/: alarm_rules.py  alarms.py  auth.py  deps.py  devices.py  events.py  gateways.py  internal.py  notification_settings.py  outbound_targets.py  signals.py  telemetry.py  users.py
apps/backend-api/app/core/: config.py
apps/backend-api/app/data/: horstmann_sn2_signals.json
apps/backend-api/app/models/: __init__.py  user.py  (+13 more)
apps/backend-api/scripts/: bootstrap_db.py  seed_engineer.py  seed_installer.py
apps/collector-dnp3/: README.md  requirements.txt
apps/collector-dnp3/collector_dnp3/: __init__.py  config.py  config_client.py  dnp3_adapter.py  main.py  publisher.py
apps/frontend-web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
apps/frontend-web/src/: main.tsx  styles.css
apps/notification-worker/: README.md
apps/notification-worker/notification_service/: main.py
apps/tag-engine/: README.md
apps/tag-engine/tag_engine/: __init__.py  main.py
docker/: .env.template  build-yadnp3.sh  compose.template.yml  entrypoint.sh
docs/: ARCHITECTURE.md  DOCKER.md  RUNBOOK.md  SECURITY.md  event-driven-validation.md
infra/scripts/windows/: SERVICE_CONTROL_PANEL.md  run-backend.ps1  run-frontend.ps1  service_control_panel.config.json  service_control_panel.py
scripts/: README.md  install.ps1  new_gateway.ps1  render_compose.py  run_gateway.ps1  show_env_summary.py
src/dnp3_gateway/: __init__.py  __main__.py  config.py  health_server.py  logging_setup.py  main.py  poller.py  state.py
src/dnp3_gateway/adapters/: __init__.py  base.py  dnp3_master.py  dnp3_yadnp3_master.py  factory.py  mock.py
src/dnp3_gateway/auth/: __init__.py  headers.py  identity.py
src/dnp3_gateway/backend/: __init__.py  config_client.py
src/dnp3_gateway/messaging/: __init__.py  jetstream_publisher.py  outbox.py  rabbit_publisher.py  resilient_publisher.py
tests/: conftest.py  test_auth_identity.py  test_config_client.py  test_config_settings.py  test_mock_adapter.py  test_poller.py  test_recovery_state.py  test_state.py
(+50 files in other folders)
